# WSL-DistroLauncher

./: Makefile.am  NEWS  configure.ac  update-files.sh
DistroLauncher/: DistributionInfo.cpp  DistributionInfo.h  DistroLauncher.cpp  DistroLauncher.rc  Helpers.cpp  Makefile.am  config.h.in  distro.rc.in  messages.mc  stdafx.h  wslapi.h
